<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/cart"
        android:title="@string/id_cart"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_one"
        android:title="@string/string_Books"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_two"
        android:title="@string/string_Accessories"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_three"
        android:title="@string/string_Bags"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_four"
        android:title="@string/string_Devices"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_five"
        android:title="@string/string_Discount"
        app:showAsAction="never" />


</menu>