<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_Book"
        android:title="@string/string_Books"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Accessories"
        app:showAsAction="never"
        android:title="@string/string_Accessories" />

    <item
        android:id="@+id/action_Bags"
        android:title="@string/string_Bags"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Devices"
        android:title="@string/string_Devices"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Discount"
        android:title="@string/string_Discount"
        app:showAsAction="never" />
</menu>