<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/itemImage1"
        android:layout_width="266dp"
        android:layout_height="136dp"
        android:layout_marginTop="60dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="null" />

    <TextView
        android:id="@+id/itemName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="Item Name"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemImage1" />

    <TextView
        android:id="@+id/itemPrice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Price"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemName1" />


    <Spinner
        android:id="@+id/quantity_Spinner"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="288dp"
        android:contentDescription="@string/qty_changeOption"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/text_Qty"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice1" />

    <TextView
        android:id="@+id/text_Qty"
        android:layout_width="47dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/string_Quantity"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Qty">

        <RadioButton
            android:id="@+id/radioButton_Curbside"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/radioButton_Curbside" />

        <RadioButton
            android:id="@+id/radioButton_Delivery"
            android:layout_width="219dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:gravity="center|center_horizontal"
            android:text="@string/radioButton_delivery" />

    </RadioGroup>

    <Button
        android:id="@+id/addToCart_Button"
        android:layout_width="414dp"
        android:layout_height="58dp"
        android:layout_marginTop="36dp"
        android:onClick="addToCartClick"
        android:text="@string/add_To_Cart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/TotalPrice"
        android:layout_width="297dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/totalPrice"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addToCart_Button" />

</androidx.constraintlayout.widget.ConstraintLayout>